--- a/css/learnMore.css
+++ b/css/learnMore.css
@@ -42,7 +42,7 @@
   margin: 0;
   width: 3rem;
   height: 3rem;
-  background: #282936;
+  background: #3eb198;
   border-radius: 1.625rem;
 }
 .cvButton button.learn-more .circle .icon {
@@ -80,7 +80,7 @@
   bottom: 0;
   padding: 0.75rem 0;
   margin: 0 0 0 1.85rem;
-  color: #282936;
+  color: #3eb198;
   font-weight: 700;
   line-height: 1.6;
   text-align: center;
